--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "starter-express-api",
+  "name": "days-until-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Days Until Countdown API",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cyclic-software/starter-express-api/issues"
-  },
-  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.17.1",
+    "moment-timezone": "^0.5.33"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
